--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
-<DOCTYPE html>
-<html lang="uz"
-  
+<!DOCTYPE html>
+<html lang="uz">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>*inc</title>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <style>
+    {
+        background-color: pale-yellow;
+    }
+    a {
+        color: #80aaff;
+    }
+    body {font-family: "Arial",Georgia,Serif;}
+    
+    h1,h2,h3,h4,h5,h6 {
+        font-family: "Playfair Display";
+        letter-spacing: 1px;
+    }
+</style>
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/20c09455d5.js" crossorigin="anonymous"></script>
